# FazbearClient

./: CMakeLists.txt  main.cpp  resources.qrc
assets/styles/: dark.qss
games/01_FNAF1/: info.json
games/02_FNAF2/: info.json
games/03_FNAF3/: info.json
games/04_FNAF4/: info.json
games/05_FNAFSL/: info.json
games/06_FNAFFFPS/: info.json
games/07_UCN/: info.json
games/08_FNAFWORLD/: info.json
src/core/: appmanager.cpp  appmanager.h  configmanager.cpp  configmanager.h  gamemanager.cpp  gamemanager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/pages/: gamespage.cpp  gamespage.h  gamespage.ui  homepage.h  homepage.ui  settingspage.cpp  settingspage.h  settingspage.ui  wikipage.cpp  wikipage.h  wikipage.ui
src/utils/: fileutils.cpp  fileutils.h  jsonutils.cpp  jsonutils.h
